test/test-files/analyzer/structs/error-constructor-wrong-args/exception.out
Semantic error in : ./test-files/analyzer/structs/error-constructor-wrong-args/source.spice:11:22:
Referenced undefined function: Function/Procedure 'TestStruct.ctor(int)' could not be found

11  dyn testStruct = TestStruct(345);
                     ^^^^^^^^^^^^^^^